Modificacion de Conexion y actualizacion del JAR